--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <!-- header -->
     <header class ="header">
-        <div class="hamburger" id ="hamburger">&#9776; </div>
         <nav class="navbar"> 
             <div class="logo">Snap</div>
             <div class="dropdown" id= "droplinks">
@@ -42,7 +41,11 @@
             <a href="#" class="login">Login</a>
             <a href="#" class="register">Register</a>
         </div>
-    
+        <div class="hamburger">
+            <span class ="bar"></span>
+            <span class ="bar"></span>
+            <span class ="bar"></span>
+        </div>
     </header>
     <!-- main content -->
     <main class = "container">
